minus numeric literal = constant rather than unary operator